nova funcionalidade tabela

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <mat-toolbar color="primary">
   <span>CRUD Angular + Spring</span>
+  <div class="elements-link">
+    <span class="element-courses" (click)="onCourses()">Courses</span>
+    <span class="element-tabela" (click)="onTable()">Tabela</span>
+  </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
